--- a/src/features/Gallery/gallery.css
+++ b/src/features/Gallery/gallery.css
@@ -6,6 +6,7 @@
 }
 
 .gallery-title {
+  font-family: 'Playfair Display', serif;
   font-size: 2rem;
   letter-spacing: 4px;
   margin-bottom: 40px;
