--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -11,6 +11,7 @@
   padding: 20px 50px;
   box-sizing: border-box;
 }
+
 .logo-img {
   filter: brightness(0) invert(1); 
   height: 90px;
@@ -18,8 +19,13 @@
   filter: brightness(0) invert(1) drop-shadow(0px 2px 4px rgba(0,0,0,0.5));
 }
 
-.menu {
-  color: white;
-  font-size: 1.5rem;
-  cursor: pointer;
+@media (max-width: 768px) {
+  .navbar {
+    padding: 15px 20px;
+    justify-content: center;
+  }
+
+  .logo-img {
+    height: 70px;
+  }
 }
